--- a/assets/scss/sections/_posts-list.scss
+++ b/assets/scss/sections/_posts-list.scss
@@ -1,5 +1,12 @@
 .blog {
 
+	.posts {
+
+		@include bp-down(sm) {
+			margin-bottom: rem-calc(-61);
+		}
+	}
+
 	.entry-meta,
 	.entry-meta a {
 		color: color(gray, 6);
@@ -135,17 +142,10 @@
 		}
 	}
 
-	.post {
+	.post-content {
 
-		&:last-of-type {
-			margin-bottom: 0 !important;
-		}
-
-		&-content {
-
-			@include bp-down(sm) {
-				width: 100%;
-			}
+		@include bp-down(sm) {
+			width: 100%;
 		}
 	}
 
@@ -153,8 +153,12 @@
 	&.blog-layout-list {
 
 		.site-main {
-			max-width: rem-calc(1082);
+			max-width: rem-calc($container-narrow-width);
 			width: 100%;
+		}
+
+		.posts {
+			margin-bottom: rem-calc(-100);
 		}
 
 		.post {
@@ -206,10 +210,10 @@
 
 	&.blog-layout-grid {
 
-		.site-main {
+		.posts {
 			display: flex;
 			flex-wrap: wrap;
-			margin: 0  rem-calc(-20) 0 rem-calc(-20);
+			margin: 0  rem-calc(-20) rem-calc(-102) rem-calc(-20);
 
 			@include bp-down( sm ) {
 				margin: 0;
@@ -236,7 +240,7 @@
 		&.has-sidebar {
 
 			.site-main {
-				max-width: calc(#{ rem-calc(1082) } + #{ rem-calc(40) });
+				max-width: calc(#{ rem-calc($container-narrow-width) } + #{ rem-calc(40) });
 				width: calc(66% + #{rem-calc(40)});
 
 				@include bp-down( sm ) {
